Addition of custom OG Image and tags to every doc page

--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -3,6 +3,8 @@ id: sfmc-config-behavioral-triggers
 title: SFMC Behavioral Triggers
 sidebar_label: Behavioral Triggers
 description: Win-back your e-commerce customers with SFMC Behavioral Triggers.
+image: img/og/og-image-sfmc-behavioral-triggers.png
+tags: [Configuration, Email, Journey, Personalisation]
 ---
 
 import Tabs from '@theme/Tabs';
