--- a/docs/config/sfmc-config-permissions.mdx
+++ b/docs/config/sfmc-config-permissions.mdx
@@ -3,6 +3,8 @@ id: sfmc-config-permissions
 title: SFMC Permissions
 sidebar_label: Permissions
 description: Welcome to the jungle, we've got Roles and Permissions.
+image: img/og/og-image-sfmc-permissions.png
+tags: [Configuration, Users, Setup]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
