--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -2,7 +2,8 @@
 id: docs-and-snippets
 title: Docs & Snippets
 slug: /
-description: SSJS + JS + AMPScript + SQL + SFMC Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud
+description: SSJS + JS + AMPScript + SQL + SFMC Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud.
+image: img/og/og-image-docs-and-snippets.png
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
