--- a/docs/js/js-if-and-switch.mdx
+++ b/docs/js/js-if-and-switch.mdx
@@ -2,7 +2,9 @@
 id: js-if-and-switch
 title: JS If & Switch
 sidebar_label: If & Switch
-description: Deep dive into the two pillars of JavaScript flow control
+description: Deep dive into the two pillars of JavaScript flow control.
+image: img/og/og-image-js-if-and-switch.png
+tags: [JavaScript]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
