--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -2,7 +2,9 @@
 id: sfmc-sql-basics
 title: SFMC SQL Basics
 sidebar_label: SQL Basics
-description: SELECT your best contacts FROM Salesforce Marketing Cloud WHERE Data Filter is not enough
+description: SELECT your best contacts FROM Salesforce Marketing Cloud WHERE Data Filter is not enough.
+image: img/og/og-image-sql-basics.png
+tags: [SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
