--- a/docs/sql/sfmc-sql-date-functions.mdx
+++ b/docs/sql/sfmc-sql-date-functions.mdx
@@ -3,6 +3,8 @@ id: sfmc-sql-date-functions
 title: SFMC SQL Date Functions
 sidebar_label: Date Functions
 description: Take control over dates with built-in SQL functions. Let the query do the job.
+image: img/og/og-image-sql-date-functions.png
+tags: [SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
