--- a/docs/sql/sfmc-sql-from.mdx
+++ b/docs/sql/sfmc-sql-from.mdx
@@ -2,7 +2,9 @@
 id: sfmc-sql-from
 title: SFMC SQL From
 sidebar_label: From
-description: Tell the SQL query FROM where you need the data
+description: Tell the SQL query FROM where you need the data.
+image: img/og/og-image-sql-from.png
+tags: [SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
