--- a/docs/sql/sfmc-sql-select.mdx
+++ b/docs/sql/sfmc-sql-select.mdx
@@ -2,7 +2,9 @@
 id: sfmc-sql-select
 title: SFMC SQL Select
 sidebar_label: Select
-description: Selected information on the SELECT statement in SFMC SQL
+description: Selected information on the SELECT statement in SFMC SQL.
+image: img/og/og-image-sql-select.png
+tags: [SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
