--- a/docs/sql/sfmc-sql-string-functions.mdx
+++ b/docs/sql/sfmc-sql-string-functions.mdx
@@ -3,6 +3,7 @@ id: sfmc-sql-string-functions
 title: SFMC SQL String Functions
 sidebar_label: String Functions
 description: Take control over strings with built-in SQL functions. Let the query do the job.
+image: img/og/og-image-sql-string-functions.png
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
