--- a/docs/sql/sfmc-sql-style-guide.mdx
+++ b/docs/sql/sfmc-sql-style-guide.mdx
@@ -3,6 +3,8 @@ id: sfmc-sql-style-guide
 title: SFMC SQL Style Guide
 sidebar_label: Style Guide
 description: Query with style. Readable, bug-free code is a few shifts & spaces away.
+image: img/og/og-image-sql-style-guide.png
+tags: [SQL, Style Guide]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
