--- a/docs/sql/sfmc-sql-where.mdx
+++ b/docs/sql/sfmc-sql-where.mdx
@@ -3,6 +3,8 @@ id: sfmc-sql-where
 title: SFMC SQL Where
 sidebar_label: Where
 description: Use WHERE to make your query lean and to the point. Less is more.
+image: img/og/og-image-sql-where.png
+tags: [SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
