--- a/docs/ssjs/debugging-ssjs.mdx
+++ b/docs/ssjs/debugging-ssjs.mdx
@@ -2,7 +2,9 @@
 id: debugging-ssjs
 title: SSJS Debugging & Error Handling
 sidebar_label: Debugging & Error Handling
-description: To catch, or not to catch, that is debugging
+description: To catch, or not to catch, that is debugging.
+image: img/og/og-image-ssjs-debugging-and-error-handling.png
+tags: [SSJS, Debugging, Cloud Page, Email, Automation]
 ---
 
 import Tabs from '@theme/Tabs';
