--- a/docs/ssjs/ssjs-if-and-switch.mdx
+++ b/docs/ssjs/ssjs-if-and-switch.mdx
@@ -2,7 +2,9 @@
 id: ssjs-if-and-switch
 title: SSJS If & Switch
 sidebar_label: If & Switch
-description: Deep dive into the two pillars of SSJS flow control
+description: Deep dive into the two pillars of SSJS flow control.
+image: img/og/og-image-ssjs-if-and-switch.png
+tags: [SSJS]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
