--- a/docs/ssjs/ssjs-loops.mdx
+++ b/docs/ssjs/ssjs-loops.mdx
@@ -2,7 +2,9 @@
 id: ssjs-loops
 title: SSJS Loops
 sidebar_label: Loops
-description: Let's dive into limited looping options of the SSJS
+description: Let's dive into limited looping options of the SSJS.
+image: img/og/og-image-ssjs-loops.png
+tags: [SSJS]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
