--- a/docs/ssjs/ssjs-snippet-ampscript-in-ssjs.mdx
+++ b/docs/ssjs/ssjs-snippet-ampscript-in-ssjs.mdx
@@ -3,6 +3,8 @@ id: ssjs-snippet-ampscript-in-ssjs
 title: AMPScript in SSJS
 sidebar_label: AMPScript in SSJS
 description: Not all AMPScript functions are available in SSJS. But you still can use them.
+image: img/og/og-image-ampscript-in-ssjs.png
+tags: [SSJS, AMPScript, Snippet]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
