--- a/docs/ssjs/ssjs-snippet-mobileconnect-phone-change.mdx
+++ b/docs/ssjs/ssjs-snippet-mobileconnect-phone-change.mdx
@@ -3,6 +3,8 @@ id: ssjs-snippet-mobileconnect-phone-change
 title: MobileConnect Phone Change
 sidebar_label: MobileConnect Phone Change
 description: Control your MobileConnect data with hidden _MobileAddress features.
+image: img/og/og-image-ssjs-mobileconnect-phone-change.png
+tags: [SSJS, Mobile]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
