--- a/docs/ssjs/ssjs-snippet-ssjs-script-template.mdx
+++ b/docs/ssjs/ssjs-snippet-ssjs-script-template.mdx
@@ -3,6 +3,8 @@ id: ssjs-snippet-ssjs-script-template
 title: SSJS Script Template
 sidebar_label: SSJS Script Template
 description: Jumpstart your coding with best practice fueled SSJS Template.
+image: img/og/og-image-ssjs-script-template.png
+tags: [SSJS, Snippet]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
