--- a/docs/ssjs/ssjs-style-guide.mdx
+++ b/docs/ssjs/ssjs-style-guide.mdx
@@ -2,7 +2,9 @@
 id: ssjs-style-guide
 title: SSJS Style Guide
 sidebar_label: Style Guide
-description: Script with style. Readable code is a few rules & best practices away
+description: Script with style. Readable code is a few rules & best practices away.
+image: img/og/og-image-ssjs-style-guide.png
+tags: [SSJS, Style Guide]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
