--- a/sites/ideas.mdx
+++ b/sites/ideas.mdx
@@ -2,6 +2,7 @@
 id: ideas
 title: Ideas
 description: Here you can find all my Salesforce IdeaExchange contributions. Let's make the change!
+image: img/og/og-image-ideas.png
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
