--- a/docs/ampscript/ampscript-style-guide.mdx
+++ b/docs/ampscript/ampscript-style-guide.mdx
@@ -2,7 +2,9 @@
 id: ampscript-style-guide
 title: AMPScript Style Guide
 sidebar_label: Style Guide
-description: Script with style. Readable code is a few rules & best practices away
+description: Script with style. Readable code is a few rules & best practices away.
+image: img/og/og-image-ampscript-style-guide.png
+tags: [AMPScript, Style Guide]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
