--- a/docs/js/js-loops.mdx
+++ b/docs/js/js-loops.mdx
@@ -3,6 +3,8 @@ id: js-loops
 title: JS Loops
 sidebar_label: Loops
 description: JavaScript offers four for loops and two while loops. What's the difference?
+image: img/og-image-javascript.png
+tags: [JavaScript]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
