--- a/docs/sql/sfmc-sql-aggregate-functions.mdx
+++ b/docs/sql/sfmc-sql-aggregate-functions.mdx
@@ -3,6 +3,8 @@ id: sfmc-sql-aggregate-functions
 title: SFMC SQL Aggregate Functions
 sidebar_label: Aggregate Functions
 description: Group rows and apply aggregate functions to see the big picture in your data extensions.
+image: img/og/og-image-sql-aggregate-functions.png
+tags: [SQL]
 ---
 
 import Tabs from '@theme/Tabs';
