--- a/docs/sql/sfmc-sql-conversion-functions.mdx
+++ b/docs/sql/sfmc-sql-conversion-functions.mdx
@@ -3,6 +3,8 @@ id: sfmc-sql-conversion-functions
 title: SFMC SQL Conversion Functions
 sidebar_label: Conversion Functions
 description: Break from the limits of Data Extension data types. Use full power of SQL to control your values.
+image: img/og/og-image-sql-conversion-functions.png
+tags: [SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
