--- a/docs/sql/sfmc-sql-like.mdx
+++ b/docs/sql/sfmc-sql-like.mdx
@@ -2,7 +2,9 @@
 id: sfmc-sql-like
 title: SFMC SQL Like
 sidebar_label: Like
-description: Get a LIKE and build more flexible SQL queries
+description: Get a LIKE and build more flexible SQL queries.
+image: img/og/og-image-sql-like.png
+tags: [SQL]
 ---
 
 import Tabs from '@theme/Tabs';
