--- a/docs/sql/sfmc-sql-numeric-functions.mdx
+++ b/docs/sql/sfmc-sql-numeric-functions.mdx
@@ -3,6 +3,8 @@ id: sfmc-sql-numeric-functions
 title: SFMC SQL Numeric Functions
 sidebar_label: Numeric Functions
 description: Take control over numbers with built-in SQL functions. Let the query do the job.
+image: img/og/og-image-sql-numeric-functions.png
+tags: [SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
