--- a/docs/usecase/tailor-with-data.mdx
+++ b/docs/usecase/tailor-with-data.mdx
@@ -3,6 +3,8 @@ id: tailor-with-data
 title: Tailor the experience with data logic
 sidebar_label: Tailor with Data
 description: Everyone and his boss are talking about personalisation. Most stop at tailoring the content. Don't be that person. Utilise the power of simple data logic and control the user flows.
+image: img/og/og-image-tailor-with-data.png
+tags: [JavaScript, Personalisation, Cloud Page]
 ---
 
 import Tabs from '@theme/Tabs';
