Small restructure to make Use Cases more visible part of the page

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -12,7 +12,7 @@ import { LeadText } from '../src/components/LeadText.js';
 
 ## Server-Side JavaScript
 
-SSJS is an XX-century-version of JavaScript paired with proprietary libraries created by Salesforce. It is one of the programmatic tools useful to leverage Marketing Cloud to its fullest potential. I am creating this documentation to make my (and hopefully also yours) work easier.
+SSJS is an XX-century version of JavaScript paired with proprietary libraries created by Salesforce. It is one of the programmatic tools useful to leverage Marketing Cloud to its fullest potential. I am creating this documentation to make my (and hopefully also yours) work easier.
 
 ### SSJS Documentation
 
@@ -21,12 +21,6 @@ SSJS is an XX-century-version of JavaScript paired with proprietary libraries cr
 - [Debugging](./ssjs/debugging-ssjs.mdx)
 - [Style Guide](./ssjs/ssjs-style-guide.mdx)
 - [Performance](./ssjs/ssjs-vs-ampscript-performance.mdx)
-
-### SSJS Use Cases
-
-- [Solve with Cloud Apps](./usecase/sfmc-cloud-apps.mdx)
-- [Engage with Countdown](./usecase/engage-with-countdown.mdx)
-- [Tailor with Data](./usecase/tailor-with-data.mdx)
 
 ### SSJS Snippets
 
@@ -38,17 +32,12 @@ SSJS is an XX-century-version of JavaScript paired with proprietary libraries cr
 
 ## JavaScript
 
-In this part, I am gathering selected elements of modern vanilla JavaScript that I find useful for marketing technologists. Expect guides on asynchronous calls to API and backend resources, form-focused DOM manipulation and playing with data objects.
+In this part, I am gathering selected elements of modern vanilla JavaScript that I find helpful for marketing technologists. Expect guides on asynchronous calls to API and backend resources, form-focused DOM manipulation and playing with data objects.
 
 ### JS Documentation
 
 - [If & Switch](./js/js-if-and-switch.mdx)
 - [Loops](./js/js-loops.mdx)
-
-### JS Use Cases
-
-- [Engage with Countdown](./usecase/engage-with-countdown.mdx)
-- [Tailor with Data](./usecase/tailor-with-data.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/js/js-if-and-switch">Read about JavaScript</a>
 
@@ -61,10 +50,6 @@ AMPScript is a proprietary scripting language in Salesforce Marketing Cloud alon
 - [Style Guide](./ampscript/ampscript-style-guide.mdx)
 - [Performance](./ssjs/ssjs-vs-ampscript-performance.mdx)
 
-### AMPScript Use Cases
-
-- [Solve with Cloud Apps](./usecase/sfmc-cloud-apps.mdx)
-
 ### AMPScript Snippets
 
 - [AMPScript in SSJS](./ssjs/ssjs-snippet-ampscript-in-ssjs.mdx)
@@ -73,7 +58,7 @@ AMPScript is a proprietary scripting language in Salesforce Marketing Cloud alon
 
 ## SFMC SQL
 
-To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation Studio, SQL is a must-have. Here I gathered both the language basics and some of the most useful snippets to copy and paste shamelessly.
+To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation Studio, SQL is a must-have. Here I gathered both the language basics and some of the most valuable snippets to copy and paste shamelessly.
 
 ### SQL Documentation
 
@@ -100,7 +85,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 
 ## SFMC Config
 
-There are many things in Salesforce Marketing Cloud that aren't code but have a massive impact on the code. Permissions. System Data Views. Configuration options. Here I focus on the most important ones that are crucial for Marketing Cloud developers.
+Many things in Salesforce Marketing Cloud aren't coding but have a massive impact on the code. Permissions. System Data Views. Configuration options. Here I focus on the most important ones that are crucial for Marketing Cloud developers.
 
 - [Permissions](./config/sfmc-config-permissions.mdx)
 - [System Data Views](./config/sfmc-config-system-data-views.mdx)
@@ -108,6 +93,17 @@ There are many things in Salesforce Marketing Cloud that aren't code but have a 
 - [Behavioral Triggers](./config/sfmc-config-behavioral-triggers.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/config/sfmc-config-system-data-views">Read about SFMC Config</a>
+
+## SFMC Use Cases
+
+Knowing how to code is one thing. Knowing what to code is another. In Use Cases, I focus not on specific features of the Marketing Cloud configuration or its programming languages but rather on using them to drive business value. Take a look and pick what you need.
+
+- [Tailor with Data](./usecase/tailor-with-data.mdx)
+- [Engage with Countdown](./usecase/engage-with-countdown.mdx)
+- [Solve with Cloud Apps](./usecase/sfmc-cloud-apps.mdx)
+
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/usecase/sfmc-cloud-apps">Read about SFMC Config</a>
+
 
 ## Changes
 
