--- a/docs/usecase/sfmc-cloud-apps.mdx
+++ b/docs/usecase/sfmc-cloud-apps.mdx
@@ -1,6 +1,7 @@
 ---
 id: sfmc-cloud-apps
 title: Solve with Cloud Apps
+sidebar_label: Solve with Cloud Page Apps
 description: Create micro applications tailored to your organisation needs using only Salesforce Marketing Cloud features.
 image: img/og/og-image-solve-with-cloud-apps.png
 tags: [SSJS, AMPScript, Snippet, Cloud Page]
