--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -100,7 +100,7 @@ Knowing how to code is one thing. Knowing what to code is another. In Use Cases,
 
 - [Tailor with Data](./usecase/tailor-with-data.mdx)
 - [Engage with Countdown](./usecase/engage-with-countdown.mdx)
-- [Solve with Cloud Apps](./usecase/sfmc-cloud-apps.mdx)
+- [Solve with Cloud Page Apps](./usecase/sfmc-cloud-page-apps.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/usecase/sfmc-cloud-apps">Read about SFMC Config</a>
 
