--- a/docs/usecase/sfmc-cloud-page-apps.mdx
+++ b/docs/usecase/sfmc-cloud-page-apps.mdx
@@ -1,10 +1,9 @@
 ---
-id: sfmc-cloud-apps
-title: Solve with Cloud Apps
-sidebar_label: Solve with Cloud Page Apps
+id: sfmc-cloud-page-apps
+title: Solve with Cloud Page Apps
 description: Create micro applications tailored to your organisation needs using only Salesforce Marketing Cloud features.
-image: img/og/og-image-solve-with-cloud-apps.png
-tags: [SSJS, AMPScript, Snippet, Cloud Page]
+image: img/og/og-image-solve-with-cloud--page-apps.png
+tags: [SSJS, AMPScript, Snippet, Cloud Page, App]
 ---
 
 import Tabs from '@theme/Tabs';
@@ -13,7 +12,7 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="Create micro applications tailored to your organisation needs using only Salesforce Marketing Cloud features." />
 
-## Cloud Apps: what and why
+## Cloud Page Apps: what and why
 
 ### When out-of-the-box features are not enough
 
@@ -29,7 +28,7 @@ There is, however, the third path. One that can be perfect if you have a necessa
 
 ### Out-of-the-box approach to out-of-the-box feature
 
-Marketing Cloud micro application offers AppExchange-style deep integration with Marketing Cloud platform and solution flexibility of custom development. In short, it is an application hosted on a Cloud Page and available via the main menu of Marketing Cloud. A Cloud App.
+Marketing Cloud micro application offers AppExchange-style deep integration with Marketing Cloud platform and solution flexibility of custom development. In short, it is an application hosted on a Cloud Page and available via the main menu of Marketing Cloud. A Cloud Page App.
 
 The good? You can use Marketing Cloud programmatic languages (SSJS and AMPScript) with all their nifty built-in functions to control the assets and behaviours of the SFMC platform and connected Sales & Service Clouds. You can also leverage the APIs to gather even more power and pull external logic and data. All this without having to care about hosting, scaling and integration. Available directly from the Marketing Cloud menu. And cost? Just a super message for loading a Cloud Page.
 
@@ -48,7 +47,7 @@ So what can you do with such a solution? Possibilities are endless, but to share
 
 Anything related to Marketing Cloud that you wish could be a bit more automated or easy can be a good idea for a micro application approach.
 
-## Cloud Apps step by step
+## Cloud Page Apps step by step
 
 ### Create your first Marketing Cloud micro application
 
@@ -57,7 +56,7 @@ Implementation is very straightforward, and you can do it in few minutes:
 1. Create a simple Cloud Page (blank page with a "Hello World" will do the job for now).
 2. Publish it and copy the URL of the Cloud Page.
 3. Go to Marketing Cloud Setup -> Apps -> Installed Packages and create a New Package.
-4. Add a Marketing Cloud App Component to the Package and paste the Cloud Page URL in both Endpoint fields and Save.
+4. Add a `Marketing Cloud App` Component to the Package and paste the Cloud Page URL in both Endpoint fields and Save.
 
 That's all. You just created your first Marketing Cloud micro application. Refresh Marketing Cloud to see it available in the main menu under the AppExchange icon. Now it's time to build up your solution to solve the business need.
 
@@ -216,15 +215,15 @@ Now you have a secure, SSO-enabled micro application deeply integrated with Mark
 
 :::note You Should Know
 
-Adding this micro SSO process blocks Web Studio from loading the Cloud Page in Preview. During development, you either have to comment out the SSO or validate the changes only by publishing and checking in the Cloud App directly.
+Adding this micro SSO process blocks Web Studio from loading the Cloud Page in Preview. During development, you either have to comment out the SSO or validate the changes only by publishing and checking in the Cloud Page App directly.
 
 It also increases the cost of using the micro application from 1 Super Message per use to 2, due to Cloud Page refresh during authorization.
 
 :::
 
-#### Capture your Cloud App usage
+#### Capture your Cloud Page App usage
 
-We can also add a logging solution that will store session and log app use history. We will need a Data Extension (one can serve multiple Cloud Apps) and a bit more code around the above snippets.
+We can also add a logging solution that will store session and log app use history. We will need a Data Extension (one can serve multiple Cloud Page Apps) and a bit more code around the above snippets.
 
 Create Data Extension with the following structure (`session` column being the Primary Key):
 
@@ -248,14 +247,14 @@ As for data retention, one day for Individual Records is enough for authorisatio
 >
 <TabItem value='ssjs'>
 
-```js title="Fill Cloud App Logging Data Extension"
+```js title="Fill Cloud Page App Logging Data Extension"
 Platform.Function.UpsertData(authDE, ['session'], [state], ['appName', 'token', 'tokenExpire'], [appName, accessToken, tokenExpire]);
 ```
 
 </TabItem>
 <TabItem value='ampscript'>
 
-```js title="Fill Cloud App Logging Data Extension"
+```js title="Fill Cloud Page App Logging Data Extension"
 UpsertData(@authDE, 1, 'session', @state, 'appName', @appName, 'token', @token, 'tokenExpire', DateAdd(Now(), 18, 'MI'))
 ```
 
@@ -264,9 +263,9 @@ UpsertData(@authDE, 1, 'session', @state, 'appName', @appName, 'token', @token, 
 
 It will additionally allow you to safely split your application into the front end (Cloud Page) and back end (Code Resource) to improve user experience and optimise speed and cost.
 
-### Secured Cloud App Template
+### Secured Cloud Page App Template
 
-By considering all the above, we get a robust and secure template for our Cloud Apps:
+By considering all the above, we get a robust and secure template for our Cloud Page Apps:
 
 <Tabs
     groupId='cloudAppCode'
@@ -278,7 +277,7 @@ By considering all the above, we get a robust and secure template for our Cloud 
 >
 <TabItem value='ssjs'>
 
-```js title="Full Cloud App Template"
+```js title="Full Cloud Page App Template"
 <script runat='server'>
     /* -------------------------------------------------------------------------
 
@@ -403,7 +402,7 @@ By considering all the above, we get a robust and secure template for our Cloud 
     };
 </script>
 
-<!-- The Cloud App micro SSO solution will secure anything you create below -->
+<!-- The Cloud Page App micro SSO solution will secure anything you create below -->
 ```
 
 :::note You Should Know
@@ -417,7 +416,7 @@ You can also leverage the session to lookup the token for API calls: `Platform.F
 </TabItem>
 <TabItem value='ampscript'>
 
-```js title="Full Cloud App Template"
+```js title="Full Cloud Page App Template"
 <!-- Authorisation START -->
 %%[
     /* -------------------------------------------------------------------------
@@ -518,7 +517,7 @@ You can also leverage the session to lookup the token for API calls: `Platform.F
 ]%%
 <!-- Authorisation END -->
 
-<!-- The Cloud App micro SSO solution will secure anything you create below -->
+<!-- The Cloud Page App micro SSO solution will secure anything you create below -->
 ```
 
 :::note You Should Know
@@ -539,9 +538,9 @@ To implement it, copy and paste the above code to the top of the Cloud Page used
 There was much information to digest, so it's time for a streamlined step by step guide from zero to hero:
 
 1. __Logging Data Extensions__
-    1. In Content Builder or Email Studio create a [Cloud App Logging Data Extension](#capture-your-cloud-app-usage).
+    1. In Content Builder or Email Studio create a [Cloud Page App Logging Data Extension](#capture-your-cloud-app-usage).
     2. In Content Builder or Email Studio create an [Error Logging Data Extension](../ssjs/debugging-ssjs.mdx#logging-to-data-extension).
-    3. In both cases, one is enough for multiple Cloud Apps. If stored in the Shared Data Extensions folder, both can serve multiple Business Units.
+    3. In both cases, one is enough for multiple Cloud Page Apps. If stored in the Shared Data Extensions folder, both can serve multiple Business Units.
 2. __Cloud Page__
     1. Create a new Cloud Page.
     2. Copy the URL.
