--- a/drafts/usecase/mvc-with-code-resource.mdx
+++ b/drafts/usecase/mvc-with-code-resource.mdx
@@ -9,3 +9,19 @@ tags: [SSJS, AMPScript, Snippet, Cloud Page, Pattern]
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="WIP" />
+
+## What is MVC?
+
+### MVC in Web Environment
+
+### MVC in Marketing Cloud
+
+## Why use MVC?
+
+## MVC Use Cases
+
+### MVC Cloud Page
+
+### MVC Mixed Source
+
+### MVC Cloud Page App
