Added Marketing Cloud tag to relevant articles

--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -4,7 +4,7 @@ title: SFMC Behavioral Triggers
 sidebar_label: Behavioral Triggers
 description: Win-back your e-commerce customers with SFMC Behavioral Triggers.
 image: img/og/og-image-sfmc-behavioral-triggers.png
-tags: [Configuration, Email, Journey, Personalisation]
+tags: [Marketing Cloud, Configuration, Email, Journey, Personalisation]
 ---
 
 import Tabs from '@theme/Tabs';
