--- a/docs/config/sfmc-config-system-data-views.mdx
+++ b/docs/config/sfmc-config-system-data-views.mdx
@@ -4,7 +4,7 @@ title: SFMC System Data Views
 sidebar_label: System Data Views
 description: Dive deep into System Data Views - the backend Marketing Cloud data. Actionable pearls await.
 image: img/og/og-image-sfmc-system-data-views.png
-tags: [Configuration, SQL, Analytics, Data Extensions]
+tags: [Marketing Cloud, Configuration, SQL, Analytics, Data Extensions]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
