--- a/docs/sql/sfmc-sql-join.mdx
+++ b/docs/sql/sfmc-sql-join.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Join
 sidebar_label: Join
 description: Data Extensions. System Data Views. With the JOIN statement, use one query to rule them all.
 image: img/og/og-image-sql-join.png
-tags: [SQL]
+tags: [Marketing Cloud, SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
