--- a/docs/sql/sfmc-sql-like.mdx
+++ b/docs/sql/sfmc-sql-like.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Like
 sidebar_label: Like
 description: Get a LIKE and build more flexible SQL queries.
 image: img/og/og-image-sql-like.png
-tags: [SQL]
+tags: [Marketing Cloud, SQL]
 ---
 
 import Tabs from '@theme/Tabs';
