--- a/docs/sql/sfmc-sql-snippet-enhanced-send-log.mdx
+++ b/docs/sql/sfmc-sql-snippet-enhanced-send-log.mdx
@@ -4,7 +4,7 @@ title: SFMC Enhanced Send Log
 sidebar_label: Enhanced Send Log
 description: Create, customise and enhance SFMC Send Log for debugging and reporting.
 image: img/og/og-image-sql-enhanced-send-log.png
-tags: [SQL, Snippet, Email, Debugging, Analytics]
+tags: [Marketing Cloud, SQL, Snippet, Email, Debugging, Analytics]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
