--- a/docs/ssjs/ssjs-if-and-switch.mdx
+++ b/docs/ssjs/ssjs-if-and-switch.mdx
@@ -4,7 +4,7 @@ title: SSJS If & Switch
 sidebar_label: If & Switch
 description: Deep dive into the two pillars of SSJS flow control.
 image: img/og/og-image-ssjs-if-and-switch.png
-tags: [SSJS]
+tags: [Marketing Cloud, SSJS]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
