--- a/docs/ssjs/ssjs-loops.mdx
+++ b/docs/ssjs/ssjs-loops.mdx
@@ -4,7 +4,7 @@ title: SSJS Loops
 sidebar_label: Loops
 description: Let's dive into limited looping options of the SSJS.
 image: img/og/og-image-ssjs-loops.png
-tags: [SSJS]
+tags: [Marketing Cloud, SSJS]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
