--- a/docs/ssjs/ssjs-vs-ampscript-performance.mdx
+++ b/docs/ssjs/ssjs-vs-ampscript-performance.mdx
@@ -4,7 +4,7 @@ title: SSJS vs AMPScript Performance
 sidebar_label: Performance
 description: Should I use AMPScript or SSJS? Which is better? As always, it depends. Check the performance comparisons for various use cases.
 image: img/og/og-image-ssjs-vs-ampscript-performance.png
-tags: [SSJS, AMPScript, Performance]
+tags: [Marketing Cloud, SSJS, AMPScript, Performance]
 ---
 
 import Tabs from '@theme/Tabs';
