--- a/docs/usecase/sfmc-cloud-page-apps.mdx
+++ b/docs/usecase/sfmc-cloud-page-apps.mdx
@@ -3,7 +3,7 @@ id: sfmc-cloud-page-apps
 title: Solve with Cloud Page Apps
 description: Create micro applications tailored to your organisation needs using only Salesforce Marketing Cloud features.
 image: img/og/og-image-solve-with-cloud--page-apps.png
-tags: [SSJS, AMPScript, Snippet, Cloud Page, App]
+tags: [Marketing Cloud, SSJS, AMPScript, Snippet, Cloud Page, App]
 ---
 
 import Tabs from '@theme/Tabs';
