--- a/docs/ampscript/ampscript-style-guide.mdx
+++ b/docs/ampscript/ampscript-style-guide.mdx
@@ -4,7 +4,7 @@ title: AMPScript Style Guide
 sidebar_label: Style Guide
 description: Script with style. Readable code is a few rules & best practices away.
 image: img/og/og-image-ampscript-style-guide.png
-tags: [AMPScript, Style Guide]
+tags: [Marketing Cloud, AMPScript, Style Guide]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
