--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Basics
 sidebar_label: SQL Basics
 description: SELECT your best contacts FROM Salesforce Marketing Cloud WHERE Data Filter is not enough.
 image: img/og/og-image-sql-basics.png
-tags: [SQL]
+tags: [Marketing Cloud, SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
