--- a/docs/sql/sfmc-sql-from.mdx
+++ b/docs/sql/sfmc-sql-from.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL From
 sidebar_label: From
 description: Tell the SQL query FROM where you need the data.
 image: img/og/og-image-sql-from.png
-tags: [SQL]
+tags: [Marketing Cloud, SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
