--- a/docs/sql/sfmc-sql-numeric-functions.mdx
+++ b/docs/sql/sfmc-sql-numeric-functions.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Numeric Functions
 sidebar_label: Numeric Functions
 description: Take control over numbers with built-in SQL functions. Let the query do the job.
 image: img/og/og-image-sql-numeric-functions.png
-tags: [SQL]
+tags: [Marketing Cloud, SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
