--- a/docs/sql/sfmc-sql-select.mdx
+++ b/docs/sql/sfmc-sql-select.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Select
 sidebar_label: Select
 description: Selected information on the SELECT statement in SFMC SQL.
 image: img/og/og-image-sql-select.png
-tags: [SQL]
+tags: [Marketing Cloud, SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
