--- a/docs/sql/sfmc-sql-snippet-debugging-value-length.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-value-length.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Debugging Value Length
 sidebar_label: Debugging Value Length
 description: Your Automations crash due to longer than expected values coming from the external source? Make your life easier with SQL.
 image: img/og/og-image-sql-debugging-value-length.png
-tags: [SQL, Snippet, Data Extensions, Debugging, Automation]
+tags: [Marketing Cloud, SQL, Snippet, Data Extensions, Debugging, Automation]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
