--- a/docs/ssjs/ssjs-snippet-mobileconnect-phone-change.mdx
+++ b/docs/ssjs/ssjs-snippet-mobileconnect-phone-change.mdx
@@ -4,7 +4,7 @@ title: MobileConnect Phone Change
 sidebar_label: MobileConnect Phone Change
 description: Control your MobileConnect data with hidden _MobileAddress features.
 image: img/og/og-image-ssjs-mobileconnect-phone-change.png
-tags: [SSJS, Mobile]
+tags: [Marketing Cloud, SSJS, Mobile]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
