--- a/docs/ssjs/ssjs-snippet-ssjs-script-template.mdx
+++ b/docs/ssjs/ssjs-snippet-ssjs-script-template.mdx
@@ -4,7 +4,7 @@ title: SSJS Script Template
 sidebar_label: SSJS Script Template
 description: Jumpstart your coding with best practice fueled SSJS Template.
 image: img/og/og-image-ssjs-script-template.png
-tags: [SSJS, Snippet]
+tags: [Marketing Cloud, SSJS, Snippet]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
