--- a/docs/ssjs/ssjs-style-guide.mdx
+++ b/docs/ssjs/ssjs-style-guide.mdx
@@ -4,7 +4,7 @@ title: SSJS Style Guide
 sidebar_label: Style Guide
 description: Script with style. Readable code is a few rules & best practices away.
 image: img/og/og-image-ssjs-style-guide.png
-tags: [SSJS, Style Guide]
+tags: [Marketing Cloud, SSJS, Style Guide]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
