--- a/docs/sql/sfmc-sql-style-guide.mdx
+++ b/docs/sql/sfmc-sql-style-guide.mdx
@@ -4,7 +4,7 @@ title: SFMC SQL Style Guide
 sidebar_label: Style Guide
 description: Query with style. Readable, bug-free code is a few shifts & spaces away.
 image: img/og/og-image-sql-style-guide.png
-tags: [Marketing Cloud, SQL, Style Guide]
+tags: [Marketing Cloud, SQL, Style Guide, Best Practice]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
