Update about no availability of Journey Builder based Custom Data Views

--- a/docs/config/sfmc-config-system-data-views.mdx
+++ b/docs/config/sfmc-config-system-data-views.mdx
@@ -845,6 +845,12 @@ When working with `_Journey` Data View:
 
 On top of all the built-in Data Views mentioned above, there is also a paid option for custom Data Views. As for the possibilities, the sky is the limit. Example? [Lukas Lunow](https://linkedin.com/in/lunow) [highlighted](https://salesforce.stackexchange.com/a/293395/91679) a fascinating one that solves the problem of knowing what is the current status of a Contact in a given Journey:
 
+:::note You Should Know
+
+As [shared](https://salesforce.stackexchange.com/a/293395/91679) by Lukas, since May 2021, there is longer no possibility to create Custom Data Views leveraging the Journey Builder.
+
+:::
+
 Name | Description | Data Type | Nullable
 -- | -- | -- | --
 JourneyVersionNumber | The version number of the version of the Journey | Number
