Update of Zen of SFMC article draft

--- a/docs/zen-of-sfmc.mdx
+++ b/docs/zen-of-sfmc.mdx
@@ -12,7 +12,7 @@ import { LeadText } from '../src/components/LeadText.js';
 
 I'm a huge fan of Tim Petter's [PEP20 - Zen of Python](https://www.python.org/dev/peps/pep-0020/). In 19 short lines, he described his recommendations for writing beautiful Python code. THe outcome transcended the specific language and I see it as a very universal guide on software engineering.
 
-In this article I share my Salesforce Marketing Cloud adaptation and interpretation of this pearl. Expect minimal modifications to the original text (as most of the recommendations are perfectly valid for Marketing Automation world), followed by my own comments explaining how particular lines can be leveraged in SFMC practice.
+In this article I share my Salesforce Marting Cloud adaptation and interpretation of this pearl. Expect minimal modifications to the original text (as most of the recommendations are perfectly valid for our Marketing Automation world), followed by my comments explaining how particular lines can be leveraged in SFMC practice.
 
 ## Zen of SFMC
 
@@ -24,28 +24,62 @@ Complex is better than complicated.
 Flat is better than nested.
 Sparse is better than dense.
 Readability counts.
-Documentation counts twice.
+Naming conventions counts twice.
 Special cases aren't special enough to break the rules.
 Although practicality beats purity.
 Errors should never pass silently.
 Unless explicitly silenced.
 In the face of ambiguity, refuse the temptation to guess.
-in the face of certainity, test again.
+Even when certain, test.
 Now is better than never.
 Although never is often better than right now.
 If the implementation is hard to explain, it's a bad idea.
 If the implementation is easy to explain, it may be a good idea.
-Naming conventions are one honking great idea -- let's do more of those!
+Documentation is one honking great idea - let's do more of those!
 ```
 
 ## Thoughts on Zen
 
 Remember that those recommendations are just that - recommendations. Not strict rules, but rather a set of general principles that might help you in your day-to-day work with Salesforce Marketing Cloud.
 
+### Beautiful is better than ugly.
 
-```
-Beautiful is better than ugly.
-```
 
+
+### Explicit is better than implicit.
+
+### Simple is better than complex.
+
+### Complex is better than complicated.
+
+### Flat is better than nested.
+
+### Sparse is better than dense.
+
+### Readability counts.
+
+### Naming conventions counts twice.
+
+### Special cases aren't special enough to break the rules.
+
+### Although practicality beats purity.
+
+### Errors should never pass silently.
+
+### Unless explicitly silenced.
+
+### In the face of ambiguity, refuse the temptation to guess.
+
+### Even when certain, test.
+
+### Now is better than never.
+
+### Although never is often better than right now.
+
+### If the implementation is hard to explain, it's a bad idea.
+
+### If the implementation is easy to explain, it may be a good idea.
+
+### Documentation is one honking great idea - let's do more of those!
 
 ## Sum Up
